# SuperComp

./: README.md
REVISAO_PF/: OpenMP.ipynb  PF_antiga.ipynb  RevisaoPF.ipynb
REVISÃO PF/Q1_Mean_Stddev/: mySolution  mySolution.cpp
REVISÃO PF/Q2_Saxpy/: mySolution  mySolution.cpp  thrust.cpp
Revisao_PI/: badprime  callgrind.out.7602  q1  q1.cpp
aula1/: index.ipynb  tester.py
aula10/: branchAndBound.cpp  buscaExaustiva
aula11/: pi_recursivo_for  pi_recursivo_mix  pi_recursivo_pragma_for.cpp
aula12/: pi_recursivo  pi_recursivo_pragma_mix.cpp  pi_recursivo_pragma_task.cpp  pi_recursivo_task
aula15/: exemplo  exemplo.cu  magnitude  magnitude.cu
aula2-3/: matrix1.cpp  precision_example  precision_example.cpp  t4.txt  vec_ex1  vec_ex1.cpp  vec_example  vec_example.cpp
aula4/: callgrind.out.172431  callgrind.out.173342  callgrind.out.173626  callgrind.out.173844  callgrind.out.173892  callgrind.out.173957  callgrind.out.174018  callgrind.out.174310  callgrind.out.174800  callgrind.out.174833  euclid  euclides-ingenuo  euclides-ingenuo.cpp  sum  sum.cpp
aula5/: maisCaro  maisCaro.cpp  maisLeve  maisLeve.cpp
aula7/: buscaLocal.cpp  structItem.cpp
aula7/monstro/: buscaLocal  buscaLocal.cpp
aula8/: buscaExaustiva.cpp  buscaExaustiva2  structBackpack.cpp
aula9/: CMakeLists.txt  branchAndBound  branchAndBound.cpp  in.txt  structBackpack.cpp  structItem.cpp
projeto1/: input.txt  main.cpp
